// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Bus with default props 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow8-11 MuiPaper-rounded-2 bus"
>
  <div
    className="MuiCardContent-root-33 MuiCardHeader-root-28"
  >
    <div
      className="MuiCardHeader-avatar-29"
    >
      <div
        className="MuiAvatar-root-34 MuiAvatar-colorDefault-35"
        style={
          Object {
            "backgroundColor": "hsl(235, 100%, 33%)",
            "cursor": "default",
            "fontSize": 32,
            "height": 64,
            "width": 64,
          }
        }
      >
        1A
      </div>
    </div>
    <div
      className="MuiCardHeader-content-30"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-body2-45 MuiCardHeader-title-31"
      >
        <h1
          className="MuiTypography-root-37 MuiTypography-display1-41"
        >
          Unknown
        </h1>
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body2-45 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-32"
      >
        1A - Eastbound
      </span>
    </div>
  </div>
  <div
    className="MuiCardMedia-root-59 busMedia"
    style={
      Object {
        "backgroundImage": "url(bus-eastbound.svg)",
      }
    }
    title="1A - Eastbound"
  />
  <div
    className="MuiCardContent-root-33"
  >
    <h2
      className="MuiTypography-root-37 MuiTypography-title-43 MuiTypography-alignCenter-50"
    >
      Departing 
      unknown
      . 
      
    </h2>
  </div>
</div>
`;

exports[`Storyshots Bus with location 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow8-11 MuiPaper-rounded-2 bus"
>
  <div
    className="MuiCardContent-root-33 MuiCardHeader-root-28"
  >
    <div
      className="MuiCardHeader-avatar-29"
    >
      <div
        className="MuiAvatar-root-34 MuiAvatar-colorDefault-35"
        style={
          Object {
            "backgroundColor": "hsl(235, 100%, 33%)",
            "cursor": "default",
            "fontSize": 32,
            "height": 64,
            "width": 64,
          }
        }
      >
        1A
      </div>
    </div>
    <div
      className="MuiCardHeader-content-30"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-body2-45 MuiCardHeader-title-31"
      >
        <h1
          className="MuiTypography-root-37 MuiTypography-display1-41"
        >
          Unknown
        </h1>
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body2-45 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-32"
      >
        1A - Eastbound
      </span>
    </div>
  </div>
  <div
    className="MuiCardMedia-root-59 busMedia"
    style={
      Object {
        "backgroundImage": "url(//maps.googleapis.com/maps/api/staticmap?size=400x350&maptype=roadmap&zoom=15&center=44.97167,-93.24725&markers=color:blue|44.97167,-93.24725&key=AIzaSyC3XH68CcTNbGGsxnHBCowhW2OaV_ITF2g)",
      }
    }
    title="1A - Eastbound"
  />
  <div
    className="MuiCardContent-root-33"
  >
    <h2
      className="MuiTypography-root-37 MuiTypography-title-43 MuiTypography-alignCenter-50"
    >
      Departing 
      unknown
      . 
      
    </h2>
  </div>
</div>
`;

exports[`Storyshots Bus with long description 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow8-11 MuiPaper-rounded-2 bus"
>
  <div
    className="MuiCardContent-root-33 MuiCardHeader-root-28"
  >
    <div
      className="MuiCardHeader-avatar-29"
    >
      <div
        className="MuiAvatar-root-34 MuiAvatar-colorDefault-35"
        style={
          Object {
            "backgroundColor": "hsl(235, 100%, 33%)",
            "cursor": "default",
            "fontSize": 32,
            "height": 64,
            "width": 64,
          }
        }
      >
        1A
      </div>
    </div>
    <div
      className="MuiCardHeader-content-30"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-body2-45 MuiCardHeader-title-31"
      >
        <h1
          className="MuiTypography-root-37 MuiTypography-display1-41"
        >
          Here we go, somewhere into the wild blue yonder!
        </h1>
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body2-45 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-32"
      >
        1A - Eastbound
      </span>
    </div>
  </div>
  <div
    className="MuiCardMedia-root-59 busMedia"
    style={
      Object {
        "backgroundImage": "url(bus-eastbound.svg)",
      }
    }
    title="1A - Eastbound"
  />
  <div
    className="MuiCardContent-root-33"
  >
    <h2
      className="MuiTypography-root-37 MuiTypography-title-43 MuiTypography-alignCenter-50"
    >
      Departing 
      unknown
      . 
      
    </h2>
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the
     
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     
    directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      onClick={[Function]}
      role="button"
      tabIndex="0"
    >
      stories
    </a>
     
    for a component called
     
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at 
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the
     
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     
    to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
